tito-app/tito-fe.yaml
# deployment of the Tito-App
apiVersion: v1
kind: Secret
metadata:
  name: mysql-pass
  labels:
    app: tito
  type: Opaque
  data:
  password: Vk13YXJlMSE=
  # Password created like this: echo -n 'VMware1!' | base64


apiVersion: apps/v1
kind: Deployment
metadata:
  name: titofe
  labels:
    name: tito-fe
    version: "latest"
    app: tito
    tier: frontend
    stage: prod
    namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      type: tito-fe
      version: v1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tito
        type: tito-fe
        version: v1
        tier: frontend
    spec:
      containers:
        - name: tito
          image: harbor.cemea.vmc/library/tito-fe:v1
          imagePullPolicy: Always
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: titofe-service
  labels:
    app: tito
    tier: frontend
    stage: prod
    namespace: default
spec:
  type: LoadBalancer
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
  - port: 80
    targetPort: 80
    # Optional field
    # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
  #  nodePort: 30007  
  selector:                
    type: tito-fe
    tier: frontend
