tito-app/tito-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tito
  namespace: default
spec:
  rules:
  - host: tito.cemea.vmc
    http:
      paths:
      - backend:
          serviceName: titofe-service
          servicePort: 80
